# notabot

./: .env.example  Cargo.toml  README.md  auto_export.json  filters.yaml  timers.yaml
config/: bot.yaml  filters.yaml  patterns.yaml  startup.toml  timers.yaml
src/: build_and_test.sh  community_filters.json  filters.yaml  lib.rs  main.rs  nightbot_import.json  notabot.toml  setup.sh
src/adaptive/: config_integration.rs  connection_pool_integration.rs  metrics.rs  mod.rs  moderation_integration.rs  parameters.rs  safety.rs  tuning_engine.rs
src/bot/: achievement_commands.rs  achievements.rs  analytics.rs  commands.rs  config_integration.rs  connection_pool.rs  enhanced_moderation.rs  filter_commands.rs  filter_import_export.rs  giveaway_commands.rs  giveaways.rs  mod.rs  moderation.rs  pattern_matching.rs  points.rs  points_commands.rs  realtime_analytics.rs  shutdown.rs  smart_escalation.rs  timer_commands.rs  timers.rs
src/config/: mod.rs
src/types/: mod.rs
src/web/: mod.rs
