[package]
name = "notabot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
async-trait = "0.1"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
dotenv = "0.15"

[lib]