[package]
name = "notabot"
version = "2.0.0"
edition = "2021"
description = "AI-powered chat moderation system with hot-reload configuration - The NightBot killer"
license = "MIT"
repository = "https://github.com/notarikon-nz/notabot"
keywords = ["twitch", "youtube", "chat", "moderation", "ai"]
categories = ["multimedia", "web-programming"]

[features]
default = ["web"]
web = ["axum", "tower", "tower-http"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Network
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures-util = "0.3"

# Configuration
dotenv = "0.15"

# Phase 2: AI and Advanced Pattern Matching
regex = "1.10"
unicode-normalization = "0.1"
base64 = "0.21"
urlencoding = "2.1"

# Import/Export
flate2 = "1.0"
tar = "0.4"

# Configuration Management (NEW)
notify = "6.0"

# Web dashboard dependencies (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }

# UUID with serde support for giveaway system
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling for giveaways
thiserror = "1.0"

rand = "0.9.1"

[lib]
name = "notabot"
path = "src/lib.rs"

[[bin]]
name = "notabot"
path = "src/main.rs"

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true

[dev-dependencies]
tempfile = "3.8"
test-log = "0.2"

[package.metadata.docs.rs]
features = ["web"]
rustdoc-args = ["--cfg", "docsrs"]